--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html, body{
 }
 
 body.demos .section {
-    background: url(images/bg.png) repeat top center #f2f3f5;
+    background: url('uploads/GitGif2') repeat top center #f2f3f5;
 }
 
 body.demos .section-title img {
