--- a/style.css
+++ b/style.css
@@ -2081,7 +2081,7 @@ select.mobile-device {
 }
 
 #contact {
-    background: url(images/bg.png) no-repeat center center #333333;
+    background: url('uploads/GitGif2.gif') no-repeat center center #333333;
 }
 
 
