--- a/style.css
+++ b/style.css
@@ -641,7 +641,7 @@ xclip
 }
 .right-box-pro::before {
     content: "";
-    background: url(images/country-quilt-dark.png);
+    background: url('uploads/GitGif2.gif');
     width: 100%;
     height: 100%;
     position: absolute;
