--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html, body{
 }
 
 body.demos .section {
-    background: url('uploads/Git1.gif') repeat top center #f2f3f5;
+    background: url('uploads/Git1.png') repeat top center #f2f3f5;
 }
 
 body.demos .section-title img {
@@ -641,7 +641,7 @@ xclip
 }
 .right-box-pro::before {
     content: "";
-    background: url('uploads/Git1.gif');
+    background: url('uploads/Git1.png');
     width: 100%;
     height: 100%;
     position: absolute;
@@ -2081,7 +2081,7 @@ select.mobile-device {
 }
 
 #contact {
-    background: url('uploads/Git1.gif') no-repeat center center #333333;
+    background: url('uploads/Git1.png') no-repeat center center #333333;
 }
 
 
