--- a/style.css
+++ b/style.css
@@ -2108,7 +2108,7 @@ select.mobile-device {
 -------------------------------------------------------------------*/
 
 .cac {
-    background-color: #232323;
+    background-color: #ADD8E6;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     -ms-transition: all .3s ease-in-out;
