--- a/style.css
+++ b/style.css
@@ -303,40 +303,46 @@ a img.aligncenter {
     HEADER
 -------------------------------------------------------------------*/
 
-.navbar-dark{
-	
+.navbar-dark {
+    /* Your existing styles */
 }
 
-.navbar-dark .navbar-nav .nav-link{
-	color: #ffffff;
-	letter-spacing: 1px;
-	font-size: 14px;
-	position: relative;
+.navbar-dark .navbar-nav .nav-link {
+    color: red; /* Changed to red */
+    letter-spacing: 1px;
+    font-size: 14px;
+    position: relative;
 }
-.navbar-dark .navbar-nav .nav-link:hover{
-	color: #ffffff;
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: darkred; /* Changed to dark red for hover state */
 }
-.navbar-dark .navbar-nav .nav-link.active{
-	font-weight: 600;
+
+.navbar-dark .navbar-nav .nav-link.active {
+    font-weight: 600;
+    color: darkred; /* Changed active link color to dark red */
 }
+
 .navbar-dark .navbar-nav .nav-link::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ffffff;
+    background: red; /* Changed to red to match the text color */
     position: absolute;
     bottom: 0;
     left: 0;
-	right: 0;
-	text-align: center;
-	margin: 0 auto;
+    right: 0;
+    text-align: center;
+    margin: 0 auto;
     border-radius: 0px;
     -webkit-transition: all .5s;
     transition: all .5s;
     z-index: -1;
 }
+
 .navbar-dark .navbar-nav .nav-link.active::after {
-	width: 50%;
+    width: 50%;
+    background: darkred; /* Changed to dark red for active state */
 }
 
 /*------------------------------------------------------------------
